Programming languages and paradigms/Interpreter/examples/bad/redeclared.ho
func main() {
    var x = "first";
    var x = "second"; // error:3:13: x redeclared in this block
}